# Router

./: .gitattributes  .gitignore  README.md  多模型路由聊天系统需求.md
backend/: .env.example  alembic.ini  pyproject.toml  test.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_core_chat.py  0002_routing_generation.py  0003_answer_branching.py  0004_memory.py  0005_roles.py
backend/app/: __init__.py  api.py  main.py
backend/app/core/: config.py  enums.py  errors.py
backend/app/db/: models_core.py  models_generation.py  models_memory.py  models_role.py  session.py
backend/app/providers/: mirt.py  model.py  registry.py  router.py  search.py  tokenizer.py
backend/app/repositories/: chat.py  conversations.py  generation.py  memories.py  roles.py
backend/app/schemas/: branches.py  chat.py  common.py  conversations.py  generation.py  memories.py  roles.py
backend/app/services/: answers.py  branches.py  chat.py  context.py  conversations.py  generation.py  memories.py  roles.py  routing.py  title.py
backend/config/: app.example.yaml  models.example.yaml  models.yaml
backend/resources/router/: mirt_bert.snapshot
backend/resources/router/bert_embeddings/: llm_embeddings.pkl  (+1 more)
backend/tests/: conftest.py  e2e_server.py
backend/tests/api/: test_answers.py  test_branches.py  test_chat.py  test_conversations.py  test_generation.py  test_memories.py  test_roles.py
backend/tests/unit/: test_answer_activation.py  test_branch_inheritance.py  test_completion_provider.py  test_completion_sanitization.py  test_config.py  test_prompt_rendering.py  test_title.py
(+44 files in other folders)
