[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-model-chat-backend"
version = "0.1.0"
description = "Multi-model MIRT routing chat backend"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "pydantic>=2.8,<3",
  "numpy>=1.26,<3",
  "pyyaml>=6,<7",
  "requests>=2.32,<3",
  "scikit-learn>=1.5,<2",
  "sqlalchemy>=2.0,<3",
  "tokenizers>=0.21,<1",
  "torch>=2.4,<3",
  "transformers>=4.48,<6",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1",
  "pytest>=8.2,<9",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q -p no:cacheprovider"
